--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
 # Dependencies
 node_modules/
 
-# Environment variables
+# Environment variables and sensitive files
 .env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env.*
+!.env.example
+js/config.js
+js/supabaseConfig.js
 
 # Build output
 dist/
@@ -22,3 +22,13 @@ build/
 *.njsproj
 *.sln
 *.sw?
+
+# Local development
+*.local
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
